--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css">
     <title>{% block title %}{% endblock %}</title>
 </head>
-<body style="background: #fdfdfd">
+<body style="background: #ffffff">
     <main>
         <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
